fix: apply overflow and max-height settings to raw code blocks (#1078)

--- a/src/sass/_markdown.scss
+++ b/src/sass/_markdown.scss
@@ -191,6 +191,8 @@
     display: block;
     padding: defaults.$padding-16;
     width: 100%;
+    overflow: auto;
+    max-height: var(--code-max-height);
   }
 
   mark {
